# code_manager

./: cargo.toml
code_manager_api/: Cargo.toml
code_manager_api/clorinde/: Cargo.toml
code_manager_api/clorinde/src/: queries.rs
code_manager_api/clorinde/src/queries/: auth.rs  boards.rs  tickets.rs
code_manager_api/prompts/: api_prompts.md
code_manager_api/queries/: auth.sql  boards.sql  tickets.sql
code_manager_api/src/: main.rs
code_manager_api/src/controllers/: auth_controller.rs  board_controller.rs  mod.rs  ticket_controller.rs
code_manager_api/src/controllers/validation/: auth_validation.rs  mod.rs  ticket_validation.rs
code_manager_api/src/middleware/: authentication.rs  mod.rs  validation.rs
code_manager_api/src/models/: api_error.rs  mod.rs  user_details.rs
code_manager_api/src/models/services/: login_response.rs
code_manager_api/src/registration/: configuration.rs  container.rs  mod.rs
code_manager_api/src/services/: helpers.rs  mod.rs
code_manager_api/src/services/auth/: jwt_auth.rs  login_service.rs  mod.rs  refresh_token_creator.rs  refresh_token_service.rs  registration_service.rs  user_creator.rs  user_email_getter.rs
code_manager_api/src/services/board/: board_column_service.rs  board_service.rs  mod.rs
code_manager_api/src/services/ticket/: mod.rs  ticket_board_service.rs  ticket_creation_service.rs  ticket_editing_service.rs  ticket_moving_service.rs  ticket_retrieval_service.rs
code_manager_web/: .eslintignore  .eslintrc.js  components.json  index.html  main.css  package.json  svelte.config.js  tsconfig.json  (+1 more)
(+19 files in other folders)
