[package]
name = "code_manager_api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "chrono", "runtime-tokio"] }
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
clorinde = { path = "clorinde" }
